Modernize deprecated new URL(String) usages (step 1: safe direct swaps)
Replace new URL(String) with URI.create(String).toURL() at call sites
where the surrounding exception handling already catches broadly
enough to cover the unchecked IllegalArgumentException URI.create can
throw (Exception/Throwable catches, or a local translation back into
MalformedURLException). This is the first of several planned steps;
the remaining sites need narrower catch-clause changes, propagate the
checked exception through a throws clause, use a different deprecated
URL constructor overload, or touch security-sensitive redirect
validation, and are being handled separately.

AI-generated